<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="55dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#F9F9F9"
        android:cropToPadding="false"
        android:onClick="onBackClick"
        android:scaleType="centerCrop"
        android:tint="#8C8C8C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24dp"
        android:contentDescription="@string/back_arrow_description" />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/verification_method_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTitle"
        app:startIconDrawable="@android:drawable/sym_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_gravity="start"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="18dp"
            android:paddingVertical="7dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <View
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/or"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/or"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/or"
        app:layout_constraintTop_toTopOf="@+id/or" />

    <View
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/or"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:layout_toEndOf="@+id/or"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/or"
        app:layout_constraintTop_toTopOf="@+id/or" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/phone"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:startIconDrawable="@android:drawable/stat_sys_phone_call">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_gravity="start"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="phone"
            android:paddingHorizontal="18dp"
            android:paddingVertical="7dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="155dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_blue_button"
        android:text="@string/continue_s"
        android:textColor="#FFFFFF"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:onClick="onContinueClick" />

</androidx.constraintlayout.widget.ConstraintLayout>