<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        android:translationZ="0dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/profile_card_profilePic"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="15dp"
                android:background="#E3D8D8"
                android:contentDescription="@string/profile_pic"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <TextView
                android:id="@+id/profile_card_subject"
                style="@android:style/Widget.Material.Light.TextView"
                android:layout_width="220dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="17dp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeTextType="uniform"
                android:text="@string/temp_subject"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/profile_card_name"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_below="@+id/profile_card_subject"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:text="@string/temp_tutor_name"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/profile_card_description"
                android:layout_width="220dp"
                android:layout_height="49dp"
                android:layout_below="@+id/profile_card_name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeTextType="uniform"
                android:text="@string/temp_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_card_tags"
                android:layout_width="320dp"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:clipToPadding="true"
                android:scrollbars="horizontal" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>