<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="110dp"
    android:paddingHorizontal="5dp"
    android:paddingVertical="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="0dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/saved_profile_card_profilePic"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="15dp"
                android:background="#E3D8D8"
                android:contentDescription="@string/profile_pic"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <TextView
                android:id="@+id/saved_profile_card_subject"
                style="@android:style/Widget.Material.Light.TextView"
                android:layout_width="220dp"
                android:layout_height="15dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="10sp"
                android:autoSizeMinTextSize="9sp"
                android:autoSizeTextType="uniform"
                android:text="@string/temp_subject"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHint="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/saved_profile_card_name"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_below="@+id/saved_profile_card_subject"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:text="@string/temp_tutor_name"
                android:textColor="#000000" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>