<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cover_photo"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sample_cover_photo" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:background="@drawable/white_transparent_gradient">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/nezuko"
                        app:civ_border_color="@color/colorPrimaryDark"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="141dp"
                        android:layout_height="30dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="7dp"
                        android:layout_marginTop="26dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toEndOf="@+id/profile_image"
                        android:autoSizeMaxTextSize="20sp"
                        android:autoSizeTextType="uniform"
                        android:text="@string/temp_tutor_name"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="141dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profile_name"
                        android:layout_marginStart="7dp"
                        android:layout_marginTop="-5dp"
                        android:layout_toEndOf="@+id/profile_image"
                        android:text="@string/temp_subject"
                        android:textColor="#000000" />

                </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</ScrollView>